<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_standard_model_rd_wrapper"
        style="@style/RadioButtonWrapperStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_standard_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_standard_model"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_standard_model"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_full_model_rd_wrapper"
        style="@style/RadioButtonWrapperStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_full_model"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_full_model"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_full_model"/>
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/button_next_model_choosing_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button_text"
        android:layout_gravity="center"/>
</LinearLayout>